# atokdict

./: .gitignore  README.md  pyproject.toml
docs/: format-notes.md
scripts/: check-no-dict-data.py
src/atokdict/: __init__.py  __main__.py  cli.py  companion.py  container.py  drt.py  dsy.py  installer.py  inventory.py  linkage.py  textscan.py
tests/: test_companion.py  test_container.py  test_drt.py  test_dsy.py  test_installer.py  test_inventory.py  test_linkage.py  test_textscan.py
