[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "atokdict"
version = "0.1.0"
description = "Reverse-engineering tools for ATOK dictionary containers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shoui520" }]
dependencies = []

[project.scripts]
atokdict = "atokdict.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/atokdict"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
